--- a/centreon/doc/fr/administration_guide/02e.rst
+++ b/centreon/doc/fr/administration_guide/02e.rst
@@ -24,33 +24,33 @@ La fenêtre suivante s'affiche :
 * Le champ **Répertoire Web de Centreon** indique le répertoire web sur lequel est installé Centreon
 * Le champ **Limite par page (par défaut)** définit le nombre d'objet affiché par page de **Configuration**
 * Le champ **Limite par page pour les pages de supervision** définit le nombre d'objet affiché par page au sein du menu **Supervision**
+* Le champ **Nombre de graphiques par page** définit le nombre maximum de graphiques affichés sur la page de *Performances**
+* Le champ **Nombre d'éléments dans les boîtes de sélection** définit le nombre maximum d'éléments affichés dans chaque boîte de sélection
 * Le champ **Durée d'expiration de la session**, exprimé en minutes, indique la durée maximale d'une session 
-* Le champ **Intervalle de rafraîchissement**, exprimé en secondes, indique l'intervalle de rafraîchissement pour les objets
 * Le champ **Intervalle de rafraîchissement pour la page des statistiques**, exprimé en secondes, indique l'intervalle de rafraîchissement pour les objets de la page des statistiques
 * Le champ **Intervalle de rafraîchissement pour la page de supervision**, exprimé en secondes, indique l'intervalle de rafraîchissement pour les objets de la page supervision
-* Le champ **Délai du premier rafraîchissement pour la page des statistiques**, exprimé en secondes, indique le délai du premier rafraîchissement pour la page des statistiques
-* Le champ **Délai du premier rafraîchissement pour la page de supervision**, exprimé en secondes, indique le délai du premier rafraîchissement pour la page de supervision
-* Le champ **Utiliser le modèle** indique le thème à utiliser pour l'interface web de Centreon
 * Le champ **Trier les problèmes par** permet de choisir comment trier les différents incidents dans le menu **Supervision**
 * Le champ **Affichage d'ordre des problèmes** indique l'ordre d'affichage des incidents par ordre de gravité croissant ou décroissant
+* Le champ **Protocole du proxy** permet de définir le type de protocole utilisé
+* Le champ **Addresse du proxy** permet de définir l'adresse/url du proxy
+* Le champ **Port du proxy** permet de définir le port d'écoute du proxy
+* Le champ **Afficher les temps d'arrêts et les acquittements sur les graphiques** permet d'afficher ou non ces éléments
+* Le champ **Afficher les comentaires sur les graphiques** permet d'afficher ou non ces éléments
 * La case **Activer la connexion automatique** autorise les utilisateurs à se connecter à l'interface web via le mécanisme de connexion automatique
 * La case **Afficher le raccourci de connexion automatique** permet d'afficher le raccourci de connexion en haut à droite
 * La case **Activer l'authentification SSO** active l'authentification SSO
 * Le champ **Mode SSO** indique si l'authentification doit avoir lieu uniquement par SSO ou bien en utilisant l'authentification locale également (Mixte). Le mode mixte nécessite l'adresse des clients de confiance.
 * Le champ **Adresses des clients SSO de confiance** indique quels sont les adresses IP/DNS des clients de confiance pour le SSO (correspond à l'adresse du reverse proxy). Chaque client de confiance est séparé par une virgule.
-* Le champ **Adresses des clients sur liste noire** indique quels sont les adresses IP/DNS des clients
 * Le champ **Entête HTTP SSO** indique la variable de l'en-tête qui sera utilisée comme login/pseudo.
-* Le champ **Expression régulière SSO de recherche sur le login** indique l'expression régulière de recherche sur le nom d'utilisateur. Si vous souhaitez supprimer le domaine de l'adresse mail: /@.*/
-* Le champ **Expression régulière SSO de remplacement sur le login** indique la chaine de caractères remplaçant l'expression régulière précédente.
 * La case **Activer la gestion des décalages horaire** active la gestion du décalage horaire
 * Le champ **Timezone par défaut de l'hôte** permet de définit un timezone par défaut pour application du décalage horaire
-* Si la case **Activer le mode strict de gestion des relations de parentés** est cochée, alors l'opérateur ne peut définir de relation de parentés d'hôte en objets supervisés par des collecteurs différents.
 * Le champ **Adresse mail de contact du support (de la plate-forme de supervision)** indique l'adresse email de support **Centre des services du client** pour la plate-forme Centreon. Cette adresse mail sera affichée en bas de page sur le lien **Centre des services**
 
-.. Warning::
+.. note::
+    Dans le cas d'un proxy CNTLM, utiliser "TCP", "localhost" et le port de connexion paramétrés.
 
+.. warning::
     La fonctionnalité SSO doit être activée seulement dans un environnement dédié et sécurisé pour le SSO. Les accès direct des utilisateurs à Centreon Web doivent être désactivés.
-
 
 ***********
 Supervision
