new(translation): Bakoffice to get all translations extracted on all messages.po (#6747)
* MON-2903

Bakoffice to get all translations extracted on all messages.po

* Fix PSR2

* translations init

* Update to take into account the language of the user

* Update comments

* Adding new translations

* Adding newline at end of line for messages.po

* Updating translations

* Updated translations

* Translations of error messages from backend

* Translating app

* update

* Update translations

* adding translations for poller menu

* Layout fixes for user submenu

* Remove duplication translations and fix language detection

--- a/centreon/lang/fr/LC_MESSAGES/messages.po
+++ b/centreon/lang/fr/LC_MESSAGES/messages.po
@@ -14564,3 +14564,129 @@ msgstr "Poubelle"
 
 #~ msgid "Process Commands"
 #~ msgstr "Commandes du processus"
+
+msgid "All pollers"
+msgstr "Tous les collecteurs"
+
+msgid "Configure pollers"
+msgstr "Configurer les collecteurs"
+
+msgid "services"
+msgstr "services"
+
+msgid "Critical services"
+msgstr "Services critiques"
+
+msgid "Warning services"
+msgstr "Services en alertes"
+
+msgid "Unknown services"
+msgstr "Services inconnus"
+
+msgid "Ok services"
+msgstr "Services Ok"
+
+msgid "Pending services"
+msgstr "Services en attente"
+
+msgid "Edit profile"
+msgstr "Editer le profil"
+
+msgid "Copy autologin link"
+msgstr "Copier le lien de connexion automatique"
+
+msgid "Server Configuration Wizard"
+msgstr "Assistant de configuration du serveur"
+
+msgid "Choose a server type"
+msgstr "Choisissez un type de serveur"
+
+msgid "Add a Centreon Remote Server"
+msgstr "Ajouter un serveur distant Centreon"
+
+msgid "Add a Centreon Poller"
+msgstr "Ajouter un collecteur Centreon"
+
+msgid "Remote Server Configuration"
+msgstr "Configuration du serveur distant"
+
+msgid "Create new Remote Server"
+msgstr "Créer un nouveau serveur distant"
+
+msgid "Server Name"
+msgstr "Nom du serveur"
+
+msgid "Server IP address"
+msgstr "Adresse IP du serveur"
+
+msgid "Database username"
+msgstr "Nom de l'utilisateur ayant accès à la base de données"
+
+msgid "Database password"
+msgstr "Mot de passe de l'utilisateur ayant accès à la base de données"
+
+msgid "Centreon Central IP address, as seen by this server"
+msgstr "Adresse IP du Central Centreon, telle que vue par ce serveur"
+
+msgid "Centreon Web Folder on Remote"
+msgstr "Dossier Centreon web sur le serveur distant"
+
+msgid "Select a Remote Server"
+msgstr "Sélectionnez un serveur distant"
+
+msgid "Select Pending Remote Links"
+msgstr "Sélectionner les liens distants en attente"
+
+msgid "Select IP"
+msgstr "Sélectionnez une IP"
+
+msgid "Select pollers to be attached to this new Remote Server"
+msgstr "Sélectionner les collecteurs à attacher à ce nouveau serveur distant"
+
+msgid "Finalizing Setup"
+msgstr "Finalisation de la configuration"
+
+msgid "Creating Export Task"
+msgstr "Création d'une tâche d'exportation"
+
+msgid "Generating Export Files"
+msgstr "Génération de fichiers d'exportation"
+
+msgid "Processing Remote Import/Configuration"
+msgstr "Traitement de l'importation/configuration à distance"
+
+msgid "The field is required"
+msgstr "Ce champ est requis"
+
+msgid "Not a valid IP address"
+msgstr "Adresse IP non valide"
+
+msgid "Add server with wizard"
+msgstr "Ajouter un serveur à l'aide de l'assistant"
+
+msgid "Select linked Remote Server"
+msgstr "Selectionez le serveur distant lié"
+
+msgid "as"
+msgstr "en tant que"
+
+msgid "Server Configuration"
+msgstr "Configuration du Serveur"
+
+msgid "Attach poller to a server"
+msgstr "Attacher un collecteur à un serveur"
+
+msgid "Advanced: reverse Centreon Broker communication flow"
+msgstr "Avancé: inversé le flux de communication du broker Centreon"
+
+msgid "%s is not valid."
+msgstr "%s n'est pas valide."
+
+msgid "You need to send '%s' in the request."
+msgstr "You devez envoyer le paramètre '%s' dans la requête."
+
+msgid "Some database poller updates are not active; check your configuration"
+msgstr "Certains collecteurs ne sont pas à jour en base de données; vérifiez votre configuration"
+
+msgid "Latency detected, check configuration for better optimization"
+msgstr "Latence détectée, vérifiez la configuration pour une meilleure optimisation"
